--- a/Assignment.1/app03/src/components/Items/Card.css
+++ b/Assignment.1/app03/src/components/Items/Card.css
@@ -1,12 +1,13 @@
 
 .card{
-    border: 1px solid  rgba(1, 1, 77, 0.728);
+    border: 1px solid  rgb(232, 142, 39);
     border-radius: 10px;
-    box-shadow: 5px 5px 5px  rgba(1, 1, 77, 0.728);
+    box-shadow: 5px 5px 5px  rgb(232, 142, 39);
     padding: 20px;
-    margin: 10px;
+    margin: 30px;
     text-align: center;
     max-width: 250px;
+    max-height: 350px;
     display: inline-block;
 }
 
