--- a/Assignment.1/app03/src/components/Items/Button.css
+++ b/Assignment.1/app03/src/components/Items/Button.css
@@ -1,8 +1,9 @@
 .bottom{
-    background-color: blue;
+    background-color: rgb(232, 142, 39);
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    margin: 15px;
 }
