--- a/Assignment.1/app03/src/index.css
+++ b/Assignment.1/app03/src/index.css
@@ -1,19 +1,16 @@
-  div{
-    border: 1px solid  rgb(232, 142, 39);
-  } 
-
   html, body {
     height: 100%; /* Para asegurar que la altura esté al 100% de la página */
     margin: 0;
     padding: 0;
+    background-color: rgba(255, 255, 255, 0.772);
   }
 
   body {
     font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   }
 
-  h1{
-    color: rgb(24, 21, 21);
+  h1, h2{
+    color: rgb(232, 142, 39);
     margin-left: 100px;
     margin-top: 50px;
   }
@@ -21,7 +18,7 @@
   footer {
     bottom: 0; /* Mantener el footer en la parte inferior */
     width: 100%; /* Asegurar que el footer cubra todo el ancho */
-    background-color: rgba(1, 1, 77, 0.728); /* Fondo del footer */
+    background-color: rgba(1, 1, 77, 0.888); /* Fondo del footer */
     color: white; /* Color del texto */
     text-align: center; /* Centrar el texto */
     padding: 10px 0; /* Espaciado arriba y abajo */
