--- a/Assignment.1/app03/src/components/Items/Card.css
+++ b/Assignment.1/app03/src/components/Items/Card.css
@@ -1,21 +1,42 @@
-
 .card{
-    border: 1px solid  rgb(232, 142, 39);
+    border: 1px solid rgb(232, 142, 39);
     border-radius: 10px;
-    box-shadow: 5px 5px 5px  rgb(232, 142, 39);
+    box-shadow: 5px 5px 15px rgba(232, 142, 39, 0.5);
     padding: 20px;
     margin: 30px;
     text-align: center;
     max-width: 250px;
     max-height: 350px;
     display: inline-block;
+    transition: transform 0.3s, box-shadow 0.3s;
+    background-color: white; /* Ensure background color for contrast */
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 5px 10px 20px rgba(232, 142, 39, 0.7);
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .card .cardImage{
-    max-width: 60%;
-    height: auto;
-    border-radius: 50%;
+    max-width: 202px;
+    max-height: 100px;
+    border-radius: 16%;
     margin-bottom: 10px;
+}
+
+.card:hover .cardImage {
+    transform: scale(1.1);
+}
+
+.content-container {
+    text-align: center;
 }
 
 .card .cardTittle{
@@ -23,7 +44,6 @@
     margin: 0;
     color:  rgba(1, 1, 77, 0.728);
 }
-
 .card .carddescription{
     font-family: Arial, Helvetica, sans-serif;
     color:  rgba(1, 1, 77, 0.728);
