--- a/Assignment.1/app03/src/components/Items/Card.css
+++ b/Assignment.1/app03/src/components/Items/Card.css
@@ -1,4 +1,4 @@
-.card{
+.card {
     border: 1px solid rgb(232, 142, 39);
     border-radius: 10px;
     box-shadow: 5px 5px 15px rgba(232, 142, 39, 0.5);
@@ -6,7 +6,7 @@
     margin: 30px;
     text-align: center;
     max-width: 250px;
-    max-height: 350px;
+    height: 350px;
     display: inline-block;
     transition: transform 0.3s, box-shadow 0.3s;
     background-color: white; /* Ensure background color for contrast */
